--- a/training/04_editing_eml_in_R.Rmd
+++ b/training/04_editing_eml_in_R.Rmd
@@ -34,7 +34,7 @@ Once you have an [eml file loaded into R](#get-package-and-eml), you can use R t
 
 ## Exercise 4 {.exercise}
 * Make sure your package from [before](#exercise-3) is loaded into R
-* Replace the exsiting `dataTable` with a new `dataTable` object with an attribute list and physical section you write in R using the above commands
+* Replace the existing `dataTable` with a new `dataTable` object with an attribute list and physical section you write in R using the above commands
 * Then [write, validate, and update your package](#update-a-package)
 * Use the [checklist](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/master/datateam/How_To/Checklist.md) to review your submission.
 * Make edits where necessary, and publish updates as needed
