--- a/training/06_using_git.Rmd
+++ b/training/06_using_git.Rmd
@@ -11,7 +11,7 @@ Don't worry too much about the forking and branching sections, as we will primar
 There are several reasons why using the arctic-data GitHub repository is helpful, both for you and for the rest of the data team. Here are a few:
 
 * **Versioning**: Accidentally make a change to your code and can't figure out why it broke? Wish you could go back to that version that worked? If you add your code to the GitHub repo you can do this!
-* **Reproducibility**: Being able to reproduce how you acomplished something is incredibly important. We should be able to tell anyone exactly how data have been reformatted, how metadata have been altered, and how packages have been created. As a data center, this is especially important for us with data team members that stay for 6-12 months becasue we may need to go back and figure out how something was done after the intern or fellow who wrote the code left the team.
+* **Reproducibility**: Being able to reproduce how you accomplished something is incredibly important. We should be able to tell anyone exactly how data have been reformatted, how metadata have been altered, and how packages have been created. As a data center, this is especially important for us with data team members that stay for 6-12 months because we may need to go back and figure out how something was done after the intern or fellow who wrote the code left the team.
 * **Troubleshooting**: If you are building a particularly complicated EML, or doing some other advanced task, it is much easier for Jesse, Jeanette, or Bryce to troubleshoot your code if it is on the GitHub repo. We can view, troubleshoot, and fix bugs very easily when code is on the GitHub repo, with the added bonus of being able to go back a version if something should break.
 * **Solve future problems**: Some of the issues we see in ADC submissions come up over and over again. When all of our code is on GitHub, we can easily reference code built for other submissions, instead of trying to solve the same problems over and over again from scratch.
 
@@ -68,7 +68,7 @@ And one final note, you can make multiple commits before you push to the repo. I
 
 ### Where do I commit?
 
-The default right now is to save data-processing scripts in the `arctic-data/datateam/data-processing/` directory, with subfolders listed by project. Directories can be created as needed but please ask Jesse or Jeanette first so we can try and maintain some semblance of order in the file structure. 
+The default right now is to save data-processing scripts in the `arctic-data/datateam/data-processing/` directory, with sub-folders listed by project. Directories can be created as needed but please ask Jesse or Jeanette first so we can try and maintain some semblance of order in the file structure. 
 
 ## My Git tab disappeared
 
