--- a/workflows/edit_data_packages/set_dataone_nodes.Rmd
+++ b/workflows/edit_data_packages/set_dataone_nodes.Rmd
@@ -1,8 +1,9 @@
 ## Set DataONE nodes 
 Tell R which repo you want to work with by setting the `Coordinating Node` (cn) and `Member Node` (mn) using the appropriate code below.
 
-**A note on nodes - be very careful about what you publish on production nodes (PROD, or arcticdata.io). These nodes should NEVER be used to publish test or training datasets.**
-
+```{block, type = "warning"}
+A note on nodes - be very careful about what you publish on production nodes (PROD, or arcticdata.io). These nodes should NEVER be used to publish test or training datasets.
+```
 
 ### Test nodes
 ```{r, eval = F}
