--- a/workflows/edit_eml/use_references.Rmd
+++ b/workflows/edit_eml/use_references.Rmd
@@ -3,7 +3,7 @@
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 library(methods)
 library(dplyr)
-library(datamgmt)
+# library(datamgmt)
 ```
 
 ### Introduction
@@ -71,7 +71,7 @@ The `datamgmt::add_creator_id()` function is a shortcut for one of our most comm
 1. Add the ORCID to a creator (usually the first creator)
 2. Update the contact information for that individual's other roles
 
-```{r eval = TRUE}
+```{r eval = FALSE}
 eml <- eml %>%
     datamgmt::add_creator_id(surname = "mecum",
                    orcid = "https://orcid.org/0000-1234-5678-4321",
